deploy: 24013de00ca6cf08292dc30b7c5b154ae00f390b

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ window.onload = wrap_img;
 <body style="background-image: linear-gradient(to right, rgb(255, 214, 101) , rgb(255, 214, 101));">
     <h1 align="center">
         <b>
-            Welcome to Tri 1 Project for VASE
+            Welcome to Tri 2 Project for SSVG
         </b>
     </h1>
 </body>
