deploy: f959137d90b4ba968f3b59f55d76c9b8c51bd8b4

--- a/404.html
+++ b/404.html
@@ -98,7 +98,7 @@ window.onload = wrap_img;
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/t2p3t1/feed.xml">
+          <a href="https://vivianknee.github.io/t2p3t1/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/t2p3t1/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
